# claude-session-monitor

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  mise.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release-binaries.yml  release-mac-app.yml  release-plz.yml  security.yml
apps/ios/: .gitignore  project.yml
apps/ios/Resources/: Info.plist
apps/ios/Sources/CsmIOS/: CsmIOSApp.swift  SessionStore.swift
apps/ios/Sources/CsmIOS/Views/: ConnectionPill.swift  OnboardingView.swift  SessionDetailView.swift  SessionListView.swift  SessionRowView.swift  SettingsView.swift
apps/mac/: .gitignore  Package.swift  build-app.sh  build-xcframework.sh  project.yml
apps/mac/Resources/: Info.plist
apps/mac/Sources/CsmCore/: CsmCore.swift  README.md
apps/mac/Sources/CsmMac/: AppDelegate.swift  AppPreferences.swift  IconRenderer.swift  PopoverView.swift  PopoverViewModel.swift  PreferencesView.swift  SessionDisplay.swift  StatusItemController.swift  main.swift
apps/mac/Sources/csmctl/: main.swift
apps/mac/Tests/CsmCoreTests/: CsmCoreTests.swift
apps/mac/Tests/CsmMacTests/: AppPreferencesTests.swift  IconRendererTests.swift  PopoverViewModelTests.swift
crates/common/: CHANGELOG.md  Cargo.toml
crates/common/src/: activation.rs  api.rs  config.rs  lib.rs  sentry.rs  session.rs  sse.rs  telemetry.rs  view_model.rs
crates/core-ffi/: Cargo.toml
crates/core-ffi/src/: lib.rs
crates/gui/: CHANGELOG.md  Cargo.toml
crates/gui/icons/: icon.icns
crates/gui/src/: main.rs
crates/reporter/: CHANGELOG.md  Cargo.toml
crates/reporter/src/: codex_run_state.rs  enrichment.rs  hook.rs  lib.rs  main.rs
crates/reporter/tests/: codex_wrapper.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/migrations/: V1__initial_schema.sql  V2__add_enrichment_columns.sql  V3__add_tmux_target.sql  V4__add_agent_metadata.sql
crates/server/src/: error.rs  lib.rs  main.rs  store.rs
crates/server/tests/: error_handling.rs  pipeline.rs  static_files.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: session-card.test.tsx  session-card.tsx  summary-bar.tsx
web/src/hooks/: use-sessions.ts
web/src/lib/: sessions.test.ts  sessions.ts  time.test.ts  time.ts  types.ts
