[package]
name = "common"
version = "0.2.0"
edition = "2024"

[features]
default = ["sentry"]
sentry = ["dep:sentry"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"], default-features = false }
sentry = { version = "0.47", default-features = false, features = ["backtrace", "panic", "reqwest", "rustls"], optional = true }
toml = "0.8"
directories = "5"

[dev-dependencies]
tempfile = "3"
