[package]
name = "csm-gui"
version = "0.1.0"
edition = "2024"

[features]
default = ["sentry"]
sentry = ["common/sentry"]

[dependencies]
eframe = "0.31"
common = { path = "../common", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
hostname = "0.4"

[package.metadata.bundle]
name = "Claude Session Monitor"
identifier = "com.claude-session-monitor.csm-gui"
icon = ["icons/icon.icns", "icons/icon.png"]
category = "public.app-category.developer-tools"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"
window-vibrancy = "0.7"
winit = { version = "0.30", default-features = false }
