[package]
name = "csm-reporter"
version = "0.1.0"
edition = "2024"

[features]
default = ["sentry"]
sentry = ["common/sentry"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
common = { path = "../common", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
hostname = "0.4"
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
server = { package = "csm-server", path = "../server", default-features = false }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
axum = "0.8"
