[package]
name = "csm-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"

[features]
default = ["sentry"]
sentry = ["common/sentry"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
common = { path = "../common" }
serde_json = "1"
tempfile = "3"
